tests/e2e/semantics/foreach_mutation_invalid_name.error
Error: syntax error in story at line 2, column 9

2|    foreach b my_mutation as e
              ^

E0117: Invalid mutation `my_mutation`
