tests/e2e/semantics/foreach_mutation_invalid_name.story
b = 0
foreach b my_mutation as e
	break
